Integration with changes seem fine

--- a/notebooks/04_la_process_demos.ipynb
+++ b/notebooks/04_la_process_demos.ipynb
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
        " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/one_leg/low/2024-01-12-16:25:45/2024-01-12-16:25:45.pkl')]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +770,7 @@
        "dict_keys(['observations', 'actions', 'rewards', 'skills', 'success', 'furniture', 'error', 'error_description'])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
        "dict_keys(['color_image1', 'color_image2', 'robot_state', 'parts_poses'])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,34 +812,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/lamp/low/2024-01-12-16:30:14/2024-01-12-16:30:14.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/lamp/low/2024-01-12-16:31:13/2024-01-12-16:31:13.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/lamp/low/2024-01-12-16:38:27/2024-01-12-16:38:27.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/lamp/low/2024-01-12-16:39:39/2024-01-12-16:39:39.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/lamp/low/2024-01-12-16:37:18/2024-01-12-16:37:18.pkl')]"
+       "100"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "demo_base = Path(os.environ[\"ROLLOUT_SAVE_DIR\"]) / \"raw\" / \"sim\" / \"lamp\"\n",
+    "randomness = \"low\" # low, med, high\n",
+    "\n",
+    "demo_base = Path(os.environ[\"ROLLOUT_SAVE_DIR\"]) / \"raw\" / \"sim\" / \"lamp\" / randomness\n",
     "paths = [path for path in demo_base.rglob(\"*.pkl\")]\n",
     "\n",
-    "paths"
+    "len(paths)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -853,19 +851,27 @@
       "\u001b[A\n",
       "\u001b[A\n",
       "\u001b[A\n",
-      "100%|██████████| 679/679 [00:00<00:00, 982.04it/s] \n"
+      "\u001b[A\n",
+      "100%|██████████| 721/721 [00:00<00:00, 967.46it/s] "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File saved as test.mp4\n"
+      "File saved as test_lamp_low.mp4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "mp4_from_pickle(paths[0], \"test.mp4\")"
+    "mp4_from_pickle(paths[0], f\"test_lamp_{randomness}.mp4\")"
    ]
   },
   {
