Change feature processing to use zarr data directly

--- a/notebooks/04_la_process_demos.ipynb
+++ b/notebooks/04_la_process_demos.ipynb
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
        " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/one_leg/low/2024-01-12-16:25:45/2024-01-12-16:25:45.pkl')]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +770,7 @@
        "dict_keys(['observations', 'actions', 'rewards', 'skills', 'success', 'furniture', 'error', 'error_description'])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,16 +812,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "100"
+       "240"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,7 +829,7 @@
    "source": [
     "randomness = \"low\" # low, med, high\n",
     "\n",
-    "demo_base = Path(os.environ[\"ROLLOUT_SAVE_DIR\"]) / \"raw\" / \"sim\" / \"lamp\" / randomness\n",
+    "demo_base = Path(os.environ[\"ROLLOUT_SAVE_DIR\"]) / \"raw\" / \"sim\" / \"lamp\" # / randomness\n",
     "paths = [path for path in demo_base.rglob(\"*.pkl\")]\n",
     "\n",
     "len(paths)"
@@ -1595,41 +1595,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-17:23:49/2024-01-12-17:23:49.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-16:56:30/2024-01-12-16:56:30.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-17:03:00/2024-01-12-17:03:00.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-18:12:48/2024-01-12-18:12:48.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-17:14:58/2024-01-12-17:14:58.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-17:48:46/2024-01-12-17:48:46.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-18:01:48/2024-01-12-18:01:48.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-17:29:56/2024-01-12-17:29:56.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-17:38:22/2024-01-12-17:38:22.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-18:08:23/2024-01-12-18:08:23.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-16:53:16/2024-01-12-16:53:16.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-18:16:21/2024-01-12-18:16:21.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-18:40:23/2024-01-12-18:40:23.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-17:20:40/2024-01-12-17:20:40.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-17:08:50/2024-01-12-17:08:50.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-18:38:19/2024-01-12-18:38:19.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-17:05:54/2024-01-12-17:05:54.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-17:33:55/2024-01-12-17:33:55.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-18:36:17/2024-01-12-18:36:17.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-18:25:13/2024-01-12-18:25:13.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-17:42:36/2024-01-12-17:42:36.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-18:14:23/2024-01-12-18:14:23.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-18:23:10/2024-01-12-18:23:10.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-17:31:55/2024-01-12-17:31:55.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-17:17:33/2024-01-12-17:17:33.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/round_table/low/2024-01-12-17:44:25/2024-01-12-17:44:25.pkl')]"
+       "129"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1638,7 +1613,7 @@
     "demo_base = Path(os.environ[\"ROLLOUT_SAVE_DIR\"]) / \"raw\" / \"sim\" / \"round_table\"\n",
     "paths = [path for path in demo_base.rglob(\"*.pkl\")]\n",
     "\n",
-    "paths"
+    "len(paths)"
    ]
   },
   {
