Training on lamp task

--- a/notebooks/04_la_process_demos.ipynb
+++ b/notebooks/04_la_process_demos.ipynb
@@ -1595,22 +1595,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "129"
+       "1"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "demo_base = Path(os.environ[\"ROLLOUT_SAVE_DIR\"]) / \"raw\" / \"sim\" / \"round_table\"\n",
+    "demo_base = Path(os.environ[\"ROLLOUT_SAVE_DIR\"]) / \"raw\" / \"sim\" / \"round_table\" / \"med\"\n",
     "paths = [path for path in demo_base.rglob(\"*.pkl\")]\n",
     "\n",
     "len(paths)"
@@ -1618,7 +1618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1638,20 +1638,26 @@
       "\u001b[A\n",
       "\u001b[A\n",
       "\u001b[A\n",
-      "\u001b[A\n",
-      "100%|██████████| 1234/1234 [00:01<00:00, 900.85it/s]\n"
+      "100%|██████████| 1284/1284 [00:01<00:00, 935.47it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File saved as round_table.mp4\n"
+      "File saved as round_table_med.mp4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "mp4_from_pickle(paths[0], \"round_table.mp4\")"
+    "mp4_from_pickle(paths[0], \"round_table_med.mp4\")"
    ]
   },
   {
