Launch lamp training with more demos

--- a/notebooks/04_la_process_demos.ipynb
+++ b/notebooks/04_la_process_demos.ipynb
@@ -1595,22 +1595,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "33"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "demo_base = Path(os.environ[\"ROLLOUT_SAVE_DIR\"]) / \"raw\" / \"sim\" / \"round_table\" / \"med\"\n",
+    "demo_base = Path(os.environ[\"ROLLOUT_SAVE_DIR\"]) / \"raw\" / \"sim\" / \"round_table\" / \"high\"\n",
     "paths = [path for path in demo_base.rglob(\"*.pkl\")]\n",
     "\n",
     "len(paths)"
@@ -1618,7 +1618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1637,27 +1637,19 @@
       "\u001b[A\n",
       "\u001b[A\n",
       "\u001b[A\n",
-      "\u001b[A\n",
-      "100%|██████████| 1284/1284 [00:01<00:00, 935.47it/s]"
+      "100%|██████████| 1039/1039 [00:01<00:00, 864.10it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File saved as round_table_med.mp4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "File saved as round_table_high.mp4\n"
      ]
     }
    ],
    "source": [
-    "mp4_from_pickle(paths[0], \"round_table_med.mp4\")"
+    "mp4_from_pickle(paths[1], \"round_table_high.mp4\")"
    ]
   },
   {
