Fix a bug with the removal of no-ops

--- a/notebooks/04_la_process_demos.ipynb
+++ b/notebooks/04_la_process_demos.ipynb
@@ -1595,22 +1595,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "33"
+       "300"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "demo_base = Path(os.environ[\"ROLLOUT_SAVE_DIR\"]) / \"raw\" / \"sim\" / \"round_table\" / \"high\"\n",
+    "demo_base = Path(os.environ[\"ROLLOUT_SAVE_DIR\"]) / \"raw\" / \"sim\" / \"round_table\"\n",
     "paths = [path for path in demo_base.rglob(\"*.pkl\")]\n",
     "\n",
     "len(paths)"
