Debugging jittery behavior

--- a/notebooks/04_la_process_demos.ipynb
+++ b/notebooks/04_la_process_demos.ipynb
@@ -732,22 +732,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/one_leg/low/2024-01-12-16:26:40/2024-01-12-16:26:40.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/one_leg/low/2024-01-12-16:27:08/2024-01-12-16:27:08.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/one_leg/low/2024-01-12-16:26:13/2024-01-12-16:26:13.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/one_leg/low/2024-01-12-16:23:17/2024-01-12-16:23:17.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/one_leg/low/2024-01-12-16:24:48/2024-01-12-16:24:48.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/one_leg/low/2024-01-12-16:21:52/2024-01-12-16:21:52.pkl'),\n",
-       " PosixPath('/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/one_leg/low/2024-01-12-16:25:45/2024-01-12-16:25:45.pkl')]"
+       "566"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +750,7 @@
     "demo_base = Path(os.environ[\"ROLLOUT_SAVE_DIR\"]) / \"raw\" / \"sim\" / \"one_leg\"\n",
     "paths = [path for path in demo_base.rglob(\"*.pkl\")]\n",
     "\n",
-    "paths"
+    "len(paths)"
    ]
   },
   {
