Revamp data processing pipeline

--- a/notebooks/22_la_teleop_demos.ipynb
+++ b/notebooks/22_la_teleop_demos.ipynb
@@ -44,29 +44,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "56"
+       "61"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pickles = list(teleopdir.rglob(\"*.pkl\"))\n",
+    "pickles = list(teleopdir.rglob(\"*success.pkl\"))\n",
     "\n",
     "len(pickles)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -102,13 +102,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File saved as tmp_rollout_dir/video3.mp4\n"
+      "File saved as tmp_rollout_dir/video1.mp4\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<video controls src=\"tmp_rollout_dir/video3.mp4\" width=\"640\" height=\"480\"></video>"
+       "<video controls src=\"tmp_rollout_dir/video1.mp4\" width=\"640\" height=\"480\"></video>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -254,25 +254,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File saved as tmp_rollout_dir/video11.mp4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<video controls src=\"tmp_rollout_dir/video11.mp4\" width=\"640\" height=\"480\"></video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "File saved as tmp_rollout_dir/video12.mp4\n"
      ]
     },
@@ -349,6 +330,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "File saved as tmp_rollout_dir/video16.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_dir/video16.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "File saved as tmp_rollout_dir/video17.mp4\n"
      ]
     },
@@ -387,13 +387,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File saved as tmp_rollout_dir/video20.mp4\n"
+      "File saved as tmp_rollout_dir/video19.mp4\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<video controls src=\"tmp_rollout_dir/video20.mp4\" width=\"640\" height=\"480\"></video>"
+       "<video controls src=\"tmp_rollout_dir/video19.mp4\" width=\"640\" height=\"480\"></video>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -406,13 +406,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File saved as tmp_rollout_dir/video21.mp4\n"
+      "File saved as tmp_rollout_dir/video20.mp4\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<video controls src=\"tmp_rollout_dir/video21.mp4\" width=\"640\" height=\"480\"></video>"
+       "<video controls src=\"tmp_rollout_dir/video20.mp4\" width=\"640\" height=\"480\"></video>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -470,25 +470,6 @@
      "data": {
       "text/html": [
        "<video controls src=\"tmp_rollout_dir/video24.mp4\" width=\"640\" height=\"480\"></video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File saved as tmp_rollout_dir/video25.mp4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<video controls src=\"tmp_rollout_dir/video25.mp4\" width=\"640\" height=\"480\"></video>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -615,6 +596,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "File saved as tmp_rollout_dir/video32.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_dir/video32.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_dir/video33.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_dir/video33.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "File saved as tmp_rollout_dir/video34.mp4\n"
      ]
     },
@@ -622,6 +641,25 @@
      "data": {
       "text/html": [
        "<video controls src=\"tmp_rollout_dir/video34.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_dir/video35.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_dir/video35.mp4\" width=\"640\" height=\"480\"></video>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -672,13 +710,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File saved as tmp_rollout_dir/video41.mp4\n"
+      "File saved as tmp_rollout_dir/video38.mp4\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<video controls src=\"tmp_rollout_dir/video41.mp4\" width=\"640\" height=\"480\"></video>"
+       "<video controls src=\"tmp_rollout_dir/video38.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_dir/video39.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_dir/video39.mp4\" width=\"640\" height=\"480\"></video>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -710,25 +767,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File saved as tmp_rollout_dir/video43.mp4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<video controls src=\"tmp_rollout_dir/video43.mp4\" width=\"640\" height=\"480\"></video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "File saved as tmp_rollout_dir/video44.mp4\n"
      ]
     },
@@ -736,25 +774,6 @@
      "data": {
       "text/html": [
        "<video controls src=\"tmp_rollout_dir/video44.mp4\" width=\"640\" height=\"480\"></video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File saved as tmp_rollout_dir/video45.mp4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<video controls src=\"tmp_rollout_dir/video45.mp4\" width=\"640\" height=\"480\"></video>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -786,13 +805,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File saved as tmp_rollout_dir/video49.mp4\n"
+      "File saved as tmp_rollout_dir/video47.mp4\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<video controls src=\"tmp_rollout_dir/video49.mp4\" width=\"640\" height=\"480\"></video>"
+       "<video controls src=\"tmp_rollout_dir/video47.mp4\" width=\"640\" height=\"480\"></video>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -812,25 +831,6 @@
      "data": {
       "text/html": [
        "<video controls src=\"tmp_rollout_dir/video50.mp4\" width=\"640\" height=\"480\"></video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File saved as tmp_rollout_dir/video51.mp4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<video controls src=\"tmp_rollout_dir/video51.mp4\" width=\"640\" height=\"480\"></video>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -881,7 +881,235 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total successes: 42\n"
+      "File saved as tmp_rollout_dir/video54.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_dir/video54.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_dir/video55.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_dir/video55.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_dir/video56.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_dir/video56.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_dir/video58.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_dir/video58.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_dir/video59.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_dir/video59.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_dir/video60.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_dir/video60.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_dir/video64.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_dir/video64.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_dir/video65.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_dir/video65.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_dir/video66.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_dir/video66.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_dir/video67.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_dir/video67.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_dir/video68.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_dir/video68.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_dir/video69.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_dir/video69.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total successes: 54\n"
      ]
     }
    ],
