Start training on teleop data (not great thus far)

--- a/notebooks/22_la_teleop_demos.ipynb
+++ b/notebooks/22_la_teleop_demos.ipynb
@@ -1130,6 +1130,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/scripted/round_table/low/2024-01-12-23:58:14/2024-01-12-23:58:14_success.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "# One-off code to assign success to all scripted demos I have\n",
+    "# I.e. from <datetime>.pkl to <datetime>_success.pkl\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "\n",
+    "for path in tqdm((teleopdir.parent / \"scripted\").rglob(\"*.pkl\")):\n",
+    "    path.rename(path.parent / f\"{path.stem}_success.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
