Implement simple voltron encoding w/ language

--- a/notebooks/16_la_test_encoders.ipynb
+++ b/notebooks/16_la_test_encoders.ipynb
@@ -421,20 +421,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.models.vision import VoltronEncoder, MAEEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enc = VoltronEncoder(\n",
+    "    device=\"cuda\",\n",
+    "    freeze=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/data/scratch/ankile/miniconda3/envs/rlgpu/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'32,762,688'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from src.models.vision import VoltronEncoder"
+    "# Count number of parameters\n",
+    "f\"{sum(p.numel() for p in enc.model.parameters() if p.requires_grad):,}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mae = MAEEncoder(\n",
+    "    device=\"cuda\",\n",
+    "    freeze=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'86,567,656'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Count number of parameters\n",
+    "f\"{sum(p.numel() for p in mae.parameters() if p.requires_grad):,}\""
    ]
   },
   {
